--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 	<nav>
     	<ul>
         	<li><a href="#inicio">hola me llamo mizar tengo 18 años</a></li>
-        	<li><a href="#acerca">acerca me gusta elmchocolate,el atletismo, perla</a></li>
+        	<li><a href="#acerca">acerca me gusta el chocolate,el atletismo, la noche</a></li>
         	<li><a href="#contacto">7712628399 o por persona </a></li>
     	</ul>
 	</nav>
