--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         	<li><a href="#inicio">hola me llamo mizar tengo 18 años</a></li>
         	<li><a href="#acerca">acerca me gusta el chocolate,el atletismo, la noche</a></li>
         	<li><a href="#contacto">7712628399 o por persona </a></li>
-			<li> <a href="mapa"><div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
+			<li><a href="#mapa">	<li> <a href="mapa"><div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
   <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;"
@@ -24,6 +24,7 @@
 
  CASTAÑEDA PICAZO
 
+</a></li>
 </a></li>
     	</ul>
 	</nav>
