--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     	<ul>
         	<li><a href="#inicio">hola me llamo mizar tengo 18 años</a></li>
         	<li><a href="#acerca">acerca me gusta el chocolate,el atletismo, la noche</a></li>
-        	<li><a href="#contacto">7712628399 o por persona </a></li>
+        	<li><a href="#contacto">por persona </a></li>
 			 <img src="URL"><div<div style="position: relative; width: 100%; height: 0; padding-top: 56.2500%;
  padding-bottom: 0; box-shadow: 0 2px 8px 0 rgba(63,69,81,0.16); margin-top: 1.6em; margin-bottom: 0.9em; overflow: hidden;
  border-radius: 8px; will-change: transform;">
