--- a/index.html
+++ b/index.html
@@ -33,4 +33,22 @@
 	</footer>
 </body>
 </html>
+<head>
+  <meta charset="UTF-8">
+  <title>Ejemplo de Jerarquía de Títulos</title>
+</head>
+<body>
+  <!-- Mi mini web (único) -->
+  <h1>Mi mini web</h1>
+  <p>Bienvenido a nuestro sitio web, donde encontrarás información detallada sobre Mi y mis gustos, como es : El chocolate, los video juegos, los deportes y las pato aventuras.</p>
+<img src="https://media.istockphoto.com/id/503874466/es/foto/luna-llena.jpg?s=612x612&w=0&k=20&c=IsakFoR6AtK2Q7oMDWQ6JN2WBFJgl2WYCz7130bZlhk=" alt="Descripción de la imagen" title="Título de la imagen">
+  <!-- Sección principal -->
+  <h2>Sección 1: Mas de mi</h2>
+  <p>mi meta es ser un buen psicologo y si se puede un gran Atleta y un buen deportista.</p>
+<img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcR1EyvkUTxLRp44yQufQ7KlpX5nlj_Jmt6bbQ&s">  <!-- Otra sección principal -->
+    <!-- Otra sección principal -->
+  <h2>Sección 2: mi museo virtual</h2>
+  <p>Aquí mis compañeros demostraran sus trabajos que hiceron en el semestre.</p>
+ 
+  <!-- Sub-sección de la sección 2 -->
 <p><img src="https://drive.google.com/file/d/1-KynZouo0G-T--jwOqzjaflD_eMvuPG-/view?usp=sharingquot;" /></p
