--- a/index.html
+++ b/index.html
@@ -34,4 +34,6 @@
 </body>
 </html>
 <head>
- 
+ <a href="<a href="https://github.com/tu_usuario/tu_repositorio" target="_blank">Visita mi repositorio de GitHub</a>
+="_blank">Visita mi repositorio de GitHub</a>
+
